# sim_csv_gui

./: .gitignore  README.md  build_executable_steps.md  development.md  filter.py  filter_script.py  make_distribution.bat  make_executable.bat  make_pypi.bat  requirements.txt  setup.cfg  setup.py
build_executable/: add_lib.py  build.bat  build_executable_steps.md  clean_env.bat  install_requirements.bat  make_executable.bat  move_dist_lib_files.py  run_pyinstaller.bat
build_tools/: generate_ui_resource.py  make_distribution.bat  make_executable.bat
docs/: development.md
examples/: example_tmobile_spn.csv  filter.py
helper_scripts/: clean_env.bat  delete_folders.bat
src/sim_csv_gui/: app.py  ascii_styled_item_delegate.py  dataframe_table_model.py  dialog_boxes.py  resources_rc.py  temp_settings.py  ui_mainwindow.py  workers.py
src/sim_csv_gui/UI/: ui_mainwindow.ui
