[metadata]
name = sim_csv_gui
author = Andrew Ma
description = GUI powered by sim_csv_script
description-file = README.md
platforms = any
classifiers = 
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only
    Operating System :: OS Independent
    Topic :: System :: Hardware :: Universal Serial Bus (USB) :: Smart Card
    Intended Audience :: Telecommunications Industry

[options]
python_requires = >=3.7
package_dir=
    =src
packages=find:

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    sim_csv_gui = sim_csv_gui.app:main